# printf

./: .gitignore  CMakeLists.txt  Makefile  a.out  author  ft_printf.c  ft_printf.h  ft_printf.h.gch  main.c  parse.c
REMOVE_BEFORE_VALUATION/: result_all_2023_of_2437.txt  result_fix_precision.txt  results.txt  tests.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
char/: print_cs.c  print_ptr.c
numbers/: float_to_string.c  ft_flt_to_str.c  print_di.c  print_f.c  print_number.c  print_o.c  print_u.c  print_x.c
pft-master/: .gitignore  history.csv  results.txt  test
pft-master/test.dSYM/Contents/Resources/DWARF/: test
tools/: flag.c  flag_manager_f.c  length.c  precision.c  print_flag.c  print_padding.c  round_ld.c  width.c
utilits/: ft_atoi.c  ft_bzero.c  ft_hex_len.c  ft_itoa.c  ft_len_base.c  ft_longlong_len.c  ft_memalloc.c  ft_memcpy.c  ft_memset.c  ft_print_u_hex.c  ft_ptr_len_base.c  ft_put_longlong_base.c  ft_put_u_longlong_base.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putnchar.c  ft_putnstr.c  ft_putstr.c  ft_str_multi_chr.c  ft_strchr.c  ft_strcmp.c  ft_strlen.c  ft_strncpy.c  ft_strndup.c  ft_strnew.c  ft_u_len_base.c  ft_u_longlong_len.c  my_itoa_10.c
